added profile description

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <br>
                 <br>
                 
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Balu K S</span><br> Web Developer</h1>
+                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Balu K S</span><br></h1>
 
                 <a href="" class="button">Contact</a>
             </div>
@@ -78,10 +78,9 @@
                 </div>
 
                 <div>
-                    <h2 class="about__subtitle">I'am Balu K S</h2>
+                    <h2 class="about__subtitle">I'am Balu K S </h2>
                     <p class="about__text">Recently graduated in 'Electronics and Communication'from The Oxford college of Engineering, Zeal to solve the modern problems in
-                        technological way. and more intrested in software development,Logical problem solving has always appealed to me and this explains my
-                        interests to choose computer programming.</p>
+                        As a technical graduate and with hands-on experience on Cisco Routers, Cisco Switches, Real Time Networks and Linux servers, I am looking forward to work with companies where I can learn, work and grow professionally and personally. </p>
                 </div>
             </div>
         </section>
@@ -133,11 +132,11 @@
                     <div class="skills__data">
                         <div class="skills__names">
                             <i class="fas fa-shield-alt skills__icon"></i>
-                            <span class="skills__name">Computer Networks & Cybersecurity </span>
+                            <span class="skills__name">Computer Networks & CCNA</span>
                         </div>
                        
                         <div>
-                            <span class="skills__percentage">40%</span>
+                            <span class="skills__percentage">80%</span>
                             <div class="skills__bar skills__CN"></div>
                         </div>  
                     </div>
@@ -150,7 +149,7 @@
 
                         </div>
                         <div>
-                            <span class="skills__percentage">70%</span>
+                            <span class="skills__percentage">60%</span>
                         </div>
                     </div>
                 </div>
